Move TypeScript dependencies to production deps for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build",
   "installCommand": "npm install --legacy-peer-deps",
-  "framework": "nextjs"
+  "framework": "nextjs",
+  "functions": {
+    "app/**/*.{js,ts,tsx}": {
+      "runtime": "nodejs18.x"
+    }
+  }
 }
