Simplify vercel.json to fix runtime configuration error

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,3 @@
 {
-  "installCommand": "npm install --legacy-peer-deps",
-  "framework": "nextjs",
-  "functions": {
-    "app/**/*.{js,ts,tsx}": {
-      "runtime": "nodejs18.x"
-    }
-  }
+    "installCommand": "npm install --legacy-peer-deps"
 }
